maze.shortestpath.ShortestPathMaze.scala.code
var x = 0
var y = 0 
var sol = 0
override def run() {
  chercherLeBiscuit()
  setIndication(x,y,sol)
  marquage(x,y,sol)
}


def chercherLeBiscuit(){
  while (!aBiscuit(x,y)){
    if (y!=getMondeHauteur()-1){
      y += 1
    } else {
      x += 1
      y = 0
    }
  }
}

def marquage(x:Int,y:Int,sol:Int){
  if (!aMurNord(x,y) && y!=0 && getIndication(x,y-1)==9999){
    if (check(x,y-1,sol+1)){
    	setIndication(x,y-1,sol+1);
      marquage(x,y-1,sol+1)
    } 
  }
  if (!aMurOuest(x,y) && x!=0 && getIndication(x-1,y)==9999){
    if (check(x-1,y,sol+1)){
    	setIndication(x-1,y,sol+1);
      marquage(x-1,y,sol+1)
    }
   }
  if (x!=getMondeLargeur()-1 && !aMurOuest(x+1,y) && getIndication(x+1,y)==9999){
    if (check(x+1,y)){
    	setIndication(x+1,y,sol+1);
      marquage(x+1,y,sol+1)
    }
  }
  if (y!=getMondeHauteur()-1 && !aMurNord(x,y+1) && getIndication(x,y+1)==9999){
    if (check(x,y+1)){
    	setIndication(x,y+1,sol+1);
      marquage(x,y+1,sol+1)
    }
	}
}

def check(x:Int,y:Int,sol:Int){
  var etat = true
  if (!aMurNord && y!=0){
    if (sol>=abs(sol-getIndication(x,y-1))>=2){
      etat=false
    }
  }
  if (!aMurOuest && x!=0){
    if (sol>=abs(sol-getIndication(x-1,y))>=2){
      etat = false 
    }
  }
  if (x!=getMondeLargeur-1 && !aMurOuest(x+1,y)){
    if (sol>=abs(sol-getIndication(x+1,y))>=2){
      etat=false
    }
  }
  if (y!=getMondeHauteur-1 && !aMurNord(x,y-1)){
    if (sol>=abs(sol-getIndication(x,y-1))>=2){
      etat=false
    }
  }
 return etat
}